@@ -162,6 +162,7 @@ Jesse Farmer
 Gavan Fantom (gavan)
 Leonardo Fernandes
 David Fiander
+Ryan Flegel
 Rob Flynn <gaim@robflynn.com>
 Rob Foehl (rwf)
 Chris Foote
